docs(wiki): fix technical inaccuracies across all documentation pages (#946)
* docs(wiki): fix technical inaccuracies across all documentation pages

Verified all 48 wiki files (24 EN + 24 ZH) against actual source code
and fixed 20 categories of factual errors plus 14 Mermaid fence corruptions.

Accuracy fixes (each verified against source):
- Version numbers: Spring Boot 3.x→4.x, Spring Cloud 2024.x→2025.x,
  Kotlin 1.9→2.x, Dragonwell JDK 21→25, loadbalancer 3.0.3→BOM-managed
- Frontend deps: TypeScript 5.9.3→6.0.3, Vite 8.0.11→8.0.16,
  React Router 7.15.0→7.15.1, fetcher 3.16.2→3.16.10
- Benchmark numbers: standard-layer throughput (~2M/~10M→226K/304K),
  improvement multipliers (38x/45x→338x/1495x), write throughput (~240K→110K-255K)
- Redis commands: ZADD→SADD, PEXPIRE→EXPIRE, ZREM→SREM (svc_idx is SET not ZSET)
- Lua script count: 13→16 (13 discovery + 3 config)
- JVM config: G1GC/1024m→ZGC/512M (shipped defaults in build.gradle.kts)
- Service name: cosky.rest.api→cosky-rest-api
- Heartbeat interval: 30s→10s (RenewProperties.kt:28)
- Namespace example: {cosky-default}→{cosky-{default}} (Namespaced.kt:30)
- HISTORY_SIZE: clarified as query cap only, storage is unbounded (+ops note)
- Broken cross-links: config.md/discovery.md/discovery-service.md→real pages

Mermaid fence corruptions (14, EN-only):
- 7 fused openers (prose text merged with ```mermaid)
- 4 malformed closers (```edf3 / ```sites:)
- 3 duplicate closing fences

Verification: Mermaid validator (52 files, 0 issues) + VitePress build passes.

* docs(wiki): address code review feedback

Fix 5 items from PR review (all verified against source):

1. Namespace key shape: use emitted `cosky-{default}` (not `{cosky-{default}}`)
   — the `{default}` portion is the Redis Cluster hash tag content
2. HISTORY_SIZE: clarify initial setConfig does NOT archive (no prior version)
   — config_set.lua only calls addHistory when currentVersion exists
3. Dependency snippets: add cosky-dependencies BOM so loadbalancer 